cambio nav home

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>GOLDEN HANDS</h1>
       </div>
 
-      <nav>
+      <nav class="navegacion">
         <ul>
           <li><a href="templates/Services.html">Services</a></li>
           <li><a href="templates/Products.html">Products</a></li>
