--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <nav class="navegacion">
-        <ul>
+        <ul class="navegacion">
           <li><a href="templates/Services.html">Services</a></li>
           <li><a href="templates/Products.html">Products</a></li>
           <li><a href="templates/Contact.html">Contact</a></li>
