--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
       <nav class="navegacion">
         <ul class="navegacion">
-          <li><a href="templates/Services.html">Services</a></li>
-          <li><a href="templates/Products.html">Products</a></li>
-          <li><a href="templates/Contact.html">Contact</a></li>
-          <li><a href="templates/AboutUs.html">AboutUs</a></li>
+          <li class="navegacion"><a href="templates/Services.html">Services</a></li>
+          <li class="navegacion"><a href="templates/Products.html">Products</a></li>
+          <li class="navegacion"><a href="templates/Contact.html">Contact</a></li>
+          <li class="navegacion"><a href="templates/AboutUs.html">AboutUs</a></li>
         </ul>
       </nav>
       <div class="button-container">
