--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       </div>
 
       <nav class="navegacion">
-        <ul>
-          <li><a href="templates/Services.html">Services</a></li>
-          <li><a href="templates/Products.html">Products</a></li>
-          <li><a href="templates/Contact.html">Contact</a></li>
-          <li><a href="templates/AboutUs.html">AboutUs</a></li>
+        <ul class="navegacion">
+          <li class="navegacion"><a href="templates/Services.html">Services</a></li>
+          <li class="navegacion"><a href="templates/Products.html">Products</a></li>
+          <li class="navegacion"><a href="templates/Contact.html">Contact</a></li>
+          <li class="navegacion"><a href="templates/AboutUs.html">AboutUs</a></li>
         </ul>
       </nav>
       <div class="button-container">
