--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <body>
     <header>
       <div class="logo">
-        <img class="logo"src="../images/logo/Golden_Hands.png" alt="Golden Hands Logo"/>
+        <a href="index.html"><img class="logo"src="../images/logo/Golden_Hands.png" alt="Golden Hands Logo"/></a>
+
       </div>
       <div class="company-name">
         <h1>GOLDEN HANDS</h1>
